# id_expl0rer_0__core

./: .gitignore  .gitmodules  README.md
id_expl0rer/: CMakeLists.txt  id_expl0rer.sln
id_expl0rer/app/: CMakeLists.txt
id_expl0rer/app/data/tilesets/: outside-ground.json
id_expl0rer/app/include/: id_expl0rer.h
id_expl0rer/app/resource/tilesets/: bitmap notes.txt  outside-ground.ase
id_expl0rer/app/src/: app.cpp  gwessample2ppc.rc2  main.cpp
id_expl0rer/engine/: CMakeLists.txt
id_expl0rer/engine/include/: engine.h
id_expl0rer/engine/include/engine/: app.h  core.h  engine.h  graphics.h  math.h  player.h
id_expl0rer/engine/include/id_expl0rer_engine/: engine.h
id_expl0rer/engine/players/desktop/: CMakeLists.txt
id_expl0rer/engine/players/desktop/include/: desktop_renderer.h
id_expl0rer/engine/players/desktop/include/player/: desktop_renderer.h
id_expl0rer/engine/players/desktop/src/: main.cpp  player.cpp  renderer.cpp
id_expl0rer/engine/players/wristterm/: CMakeLists.txt  ReadMe.txt  gwes-sample2.sln
id_expl0rer/engine/players/wristterm/include/: wristterm_player.h  wristterm_renderer.h
id_expl0rer/engine/players/wristterm/src/: gwes-sample2ppc.rc
id_expl0rer/engine/src/: engine.cpp  graphics.cpp  mainloop.cpp  math.cpp
id_expl0rer/engine/tests/: CMakeLists.txt
id_expl0rer/id_expl0rer/: MainFrm.cpp  MainFrm.h  ReadMe.txt  Resourceppc.h  id_expl0rer.cpp  id_expl0rer.h  id_expl0rer.reg  id_expl0rer.vcproj  id_expl0rerDoc.cpp  id_expl0rerDoc.h  id_expl0rerView.cpp  id_expl0rerView.h  id_expl0rerppc.rc  stdafx.cpp  stdafx.h
id_expl0rer/id_expl0rer/res/: id_expl0rerppc.rc2
source/: README.md
~Documentation/: Design.md
~Sample/linux/: CMakeLists.txt  main.cpp
~Sample/sharedBuild/: CMakeLists.txt
~Sample/sharedBuild/source/: gwes-sample2.cpp  gwes-sample2.vcproj  resourceppc.h  stdafx.cpp
~Sample/wt4090/: CMakeLists.txt  gwes-sample2.sln
~Sample/wt4090/gwes-sample2/: ReadMe.txt  gwes-sample2.cpp  gwes-sample2.vcproj  gwes-sample2ppc.rc  gwessample2ppc.rc2  resourceppc.h  stdafx.cpp
